Fix table overflow

--- a/java/frontend-angular/src/app/app.component.css
+++ b/java/frontend-angular/src/app/app.component.css
@@ -5,5 +5,7 @@ table, th, td {
 
 #main-content{
   display: flex;
+  overflow: auto;
   justify-content: center;
+  padding-bottom: 32px;
 }
